--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     //Dependency of material
     implementation 'com.google.android.material:material:1.3.0'
 
-
+    //Dependency for CardView
+    implementation 'android.cardview:cardview:1.0.0'
 
 }
