--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
 
     //Dependency for CardView
-    implementation 'android.cardview:cardview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    //Dependency for firebase UI
+    implementation 'com.firebaseui:firebase-ui-database:7.2.0'
 
 }
