--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mrgsmanagementapp">
-
+<uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MrgsManagementApp">
-        <activity android:name=".PlannerActivity"></activity>
+        <activity android:name=".WebViewActivity"></activity>
+        <activity android:name=".PlannerActivity" />
         <activity android:name=".ToDoListActivity" />
         <activity android:name=".PastPapersActivity" />
         <activity android:name=".ForgotPassword" />
