--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MrgsManagementApp">
-        <activity android:name=".EventEditActivity"></activity>
+        <activity android:name=".EventEditActivity" />
         <activity android:name=".WeekViewActivity" />
         <activity android:name=".WebViewActivity" />
         <activity android:name=".PlannerActivity" />
