--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MrgsManagementApp">
+        <activity
+            android:name=".DetailActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.login.LibraryActivity"
+            android:exported="true"
+            android:label="@string/title_activity_library" />
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="true" />
         <activity android:name=".PlannerActivity" />
         <activity android:name=".ToDoListActivity" />
         <activity android:name=".AboutActivity" />
