--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:exported="true"
             android:label="@string/title_activity_library" />
         <activity
-            android:name=".ProfileActivity"
+            android:name=".PastActivity"
             android:exported="true" />
         <activity android:name=".EventEditActivity" />
         <activity android:name=".WeekViewActivity" />
